added some noteskins, made options menu, and other cool shit

--- a/assets/images/ui-skins/default-circles/config.json
+++ b/assets/images/ui-skins/default-circles/config.json
@@ -14,7 +14,7 @@
         ["up hold", "up hold end"],
         ["right hold", "right hold end"]
     ],
-    "name": "Arrows",
+    "name": "Circles",
     "size": 0.7,
     "framerate": 24,
     "noColoring": false,
