--- a/assets/images/ui-skins/default-fnf/config.json
+++ b/assets/images/ui-skins/default-fnf/config.json
@@ -5,19 +5,20 @@
         ["up static0", "up press0", "up confirm0", "up note0"],
         ["right static0", "right press0", "right confirm0", "right note0"],
         ["middle static0", "middle press0", "middle confirm0", "middle note0"],
-        ["left static0", "left press0", "left confirm0", "left note0"],
-        ["down static0", "down press0", "down confirm0", "down note0"],
-        ["up static0", "up press0", "up confirm0", "up note0"],
-        ["right static0", "right press0", "right confirm0", "right note0"],
+        ["left static0", "leftalt press0", "leftalt confirm0", "leftalt note0"],
+        ["down static0", "downalt press0", "downalt confirm0", "downalt note0"],
+        ["up static0", "upalt press0", "upalt confirm0", "upalt note0"],
+        ["right static0", "rightalt press0", "rightalt confirm0", "rightalt note0"],
         ["left hold", "left hold end"],
         ["down hold", "down hold end"],
         ["up hold", "up hold end"],
         ["right hold", "right hold end"]
     ],
-    "name": "Arrows",
-    "size": 0.7,
+    "name": "FNF Arrows",
+    "size": 0.65,
     "framerate": 24,
-    "noColoring": false,
+    "noColoring": true,
     "antialiasing": true,
-    "sustainTransparency": 1
+    "offsets": [5, 5],
+    "sustainTransparency": 0.6
 }
